# bimpcc_2

./: .gitignore  AbstractNLP.py  Dataset.py  L2TVMPCCReg.py  cyipopt_test.py  generate_images.py  initial_point.py  pyproject.toml  run_experiment.py  run_experiment_initial_point.py  run_experiment_scale_dependency.py  scale_dependency.py  utils.py
bimpcc/: __init__.py  dataset.py  dataset_experiments.py  mpcc.py  nlp.py  nlp_old.py  tv_denoising.py  tv_denoising_old.py  tv_denoising_projected.py  tv_reconstruct.py  utils.py  utils_recons.py  utils_reg.py  utils_tvq.py
bimpcc/algorithms/: mpcc.py
bimpcc/models/: __init__.py  model.py  mpcc_slack_model.py  recons_regularized.py  tvdenoising.py  tvdenoising_model.py  tvq_denoising.py  tvqregularized.py  tvreconstruction.py  tvreconstruction_model.py  tvregularized.py  typings.py
bimpcc/tests/: test_gradients.py  test_nlp.py  test_penalized_mpcc.py  test_reg_denoising.py  test_scholtes.py  test_tv_model.py  test_tv_proj.py  (+1 more)
config/: initial_point.yml  scale_dependency.yml  tvdenoising_toy.yml
notebook/: tv_denoising2.ipynb  tv_denoising3.ipynb  tv_denoisingreg.ipynb  tv_rec_1.ipynb  tv_reconstruct.ipynb  tvdenoising.ipynb  tvq_denosing.ipynb
notebook_new/: tv_denoising.ipynb  tv_penalized.ipynb
outputs/: results_mpcc_vs_img_size.h5  tabla_iteraciones.tex
outputs_initial_point/: results_initial_point.h5  tabla_initial_point.tex
problems/: tv_denoising.py
src/: dataset.py  mpcc.py  nlp.py  utils.py
tests/: test_bard1.py  test_penalized_bard1.py  test_penalized_tv.py  test_reconstruction_tv.py
(+5 files in other folders)
