[project]
name = "bimpcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cyipopt>=1.5.0",
    "ipykernel>=6.29.5",
    "jax>=0.5.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "ruff>=0.8.4",
    "scikit-image>=0.25.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.14.1",
]
